# RUDLeg

./: .gitignore  MANIFEST.in  manage.py  pyproject.toml  requirements.txt
RUDLeg/: __init__.py  abstract_packet.py  animate.py  camera.py  cli.py  exceptions.py  johnson.py  physic2d.py
RUDLeg/core_magic/: CodeTemplateAndFunction.py  DebugManager.py  ExecuteCommand.py  TheMainGame.py  build.json
RUDLeg/textures/: texture.py
RUDLeg/ui_interface/: __init__.py  button_type.py  user_type.py
rudleg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
