[project]
name = "rudleg"
version = "0.1.0"
description = "RudlEngine — experimental game framework"
authors = [{ name = "TheDreadMatrix" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.27",
    "numba>=0.90",
    "pygame-ce>=2.5.2",
    "moderngl>=6.5",
    "pyglm>=0.1"
]