[project]
name = "rudleg"
version = "0.1.0"
description = "RudlEngine — experimental game framework"
authors = [{ name = "TheDreadMatrix" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23,<1.27",
    "pygame-ce>=2.5,<2.6",
    "moderngl>=5.10,<6.5",
    "pyglm>=0.1"
]